--- a/src/index.css
+++ b/src/index.css
@@ -229,3 +229,15 @@
     opacity: 0;
   }
 }
+
+@keyframes l16 {
+  0% {
+    background-position: -150% 0, -150% 0;
+  }
+  66% {
+    background-position: 250% 0, -150% 0;
+  }
+  100% {
+    background-position: 250% 0, 250% 0;
+  }
+}
